Add initial information and structure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Odin's Divorce</title>
+  <title>Where is Wario?</title>
 </head>
 <body>
   
@@ -12,41 +12,85 @@
   <!-- Nav
   ---------------------------------------------- -->
   <nav class="nav">
-
+    <div class="row">
+      <div class="col">
+        <a class="nav-logo" href="">WiW.com</a>
+      </div>
+      <div class="col">
+        <a class="nav-link" href="">link</a>
+        <a class="nav-link" href="">link</a>
+        <a class="nav-link" href="">link</a>
+      </div>
+    </div>
   </nav>
 
 
   <!-- Hero/Landing
   ---------------------------------------------- -->
   <div class="hero">
-
+    <div class="row">
+      <div class="col">
+        <h1>Wario</h1>
+        <p>He's a cool dude</p>
+        <a class="btn btn-primary" href=""></a>
+      </div>
+      <div class="col">
+        <img src="" alt="Wario Rules">
+      </div>
+    </div>
   </div>
 
 
   <!-- Staff
   ---------------------------------------------- -->
   <div class="about-staff">
-
+    <div class="row">
+      <div class="col">
+        <img src="" alt="Wario Rules">
+        <p>Text</p>
+      </div>
+      <div class="col">
+        <img src="" alt="Wario Rules">
+        <p>Text</p>
+      </div>
+      <div class="col">
+        <img src="" alt="Wario Rules">
+        <p>Text</p>
+      </div>
+      <div class="col">
+        <img src="" alt="Wario Rules">
+        <p>Text</p>
+      </div>
+    </div>
   </div>
 
 
   <!-- Quote
   ---------------------------------------------- -->
-  <div class="quote">
-
-  </div>
+  <blockquote class="blockquote">
+    <p>Text</p>
+    <cite>Cite</cite>
+  </blockquote>
 
 
   <!-- Sign-Up
   ---------------------------------------------- -->
   <div class="sign-up">
-    
+    <div class="row">
+      <div class="col">
+        <h5>Outline</h5>
+        <p>Text</p>
+      </div>
+      <div class="col">
+        <a class="btn btn-outline" href=""></a>
+      </div>
+    </div>
   </div>
 
   <!-- Footer 
   ---------------------------------------------- -->
   <footer class="footer">
-    
+    Copyright c The Odin Project
   </footer>
 
 
