Wrap row content in containers

--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
   <!-- Nav
   ---------------------------------------------- -->
   <nav class="nav">
-    <div class="row">
-      <div class="col">
-        <a class="nav-logo" href="">WiW.com</a>
-      </div>
-      <div class="col">
-        <a class="nav-link" href="">link</a>
-        <a class="nav-link" href="">link</a>
-        <a class="nav-link" href="">link</a>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <a class="nav-logo" href="">WiW.com</a>
+        </div>
+        <div class="col">
+          <a class="nav-link" href="">link</a>
+          <a class="nav-link" href="">link</a>
+          <a class="nav-link" href="">link</a>
+        </div>
       </div>
     </div>
   </nav>
@@ -28,14 +30,16 @@
   <!-- Hero/Landing
   ---------------------------------------------- -->
   <div class="hero">
-    <div class="row">
-      <div class="col">
-        <h1>Wario</h1>
-        <p>He's a cool dude</p>
-        <a class="btn btn-primary" href=""></a>
-      </div>
-      <div class="col">
-        <img src="" alt="Wario Rules">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h1>Wario</h1>
+          <p>He's a cool dude</p>
+          <a class="btn btn-primary" href=""></a>
+        </div>
+        <div class="col">
+          <img src="" alt="Wario Rules">
+        </div>
       </div>
     </div>
   </div>
@@ -44,22 +48,24 @@
   <!-- Staff
   ---------------------------------------------- -->
   <div class="about-staff">
-    <div class="row">
-      <div class="col">
-        <img src="" alt="Wario Rules">
-        <p>Text</p>
-      </div>
-      <div class="col">
-        <img src="" alt="Wario Rules">
-        <p>Text</p>
-      </div>
-      <div class="col">
-        <img src="" alt="Wario Rules">
-        <p>Text</p>
-      </div>
-      <div class="col">
-        <img src="" alt="Wario Rules">
-        <p>Text</p>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <img src="" alt="Wario Rules">
+          <p>Text</p>
+        </div>
+        <div class="col">
+          <img src="" alt="Wario Rules">
+          <p>Text</p>
+        </div>
+        <div class="col">
+          <img src="" alt="Wario Rules">
+          <p>Text</p>
+        </div>
+        <div class="col">
+          <img src="" alt="Wario Rules">
+          <p>Text</p>
+        </div>
       </div>
     </div>
   </div>
@@ -68,21 +74,25 @@
   <!-- Quote
   ---------------------------------------------- -->
   <blockquote class="blockquote">
-    <p>Text</p>
-    <cite>Cite</cite>
+    <div class="container">
+      <p>Text</p>
+      <cite>Cite</cite>
+    </div>
   </blockquote>
 
 
   <!-- Sign-Up
   ---------------------------------------------- -->
   <div class="sign-up">
-    <div class="row">
-      <div class="col">
-        <h5>Outline</h5>
-        <p>Text</p>
-      </div>
-      <div class="col">
-        <a class="btn btn-outline" href=""></a>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h5>Outline</h5>
+          <p>Text</p>
+        </div>
+        <div class="col">
+          <a class="btn btn-outline" href=""></a>
+        </div>
       </div>
     </div>
   </div>
@@ -90,7 +100,9 @@
   <!-- Footer 
   ---------------------------------------------- -->
   <footer class="footer">
-    Copyright c The Odin Project
+    <div class="container">
+      Copyright c The Odin Project
+    </div>
   </footer>
 
 
