--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,700|Montserrat:300,700" rel="stylesheet">
   <title>Where is Wario?</title>
 </head>
 <body>
@@ -17,7 +19,7 @@
         <div class="col">
           <a class="nav-logo" href="">WiW.com</a>
         </div>
-        <div class="col">
+        <div class="col-auto">
           <a class="nav-link" href="">link</a>
           <a class="nav-link" href="">link</a>
           <a class="nav-link" href="">link</a>
