--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="col">
           <h1>Wario</h1>
           <p>He's a cool dude</p>
-          <a class="btn btn-solid" href=""></a>
+          <a class="btn btn-solid" href="">Tell Us</a>
         </div>
         <div class="col">
           <img src="" alt="Wario Rules">
