Semi-finish hero section

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <h1>Wario</h1>
-          <p>He's a cool dude</p>
+          <h1>Where <i>is</i> Wario?</h1>
+          <p>This man has been on the run for far too long. We need to reach him about his car's extended warranty.</p>
           <a class="btn btn-solid" href="">Tell Us</a>
         </div>
         <div class="col">
-          <img src="" alt="Wario Rules">
+          <img src="https://mario.wiki.gallery/images/c/c8/MKDD_Thanks_For_Playing.png" alt="Wario Rules">
         </div>
       </div>
     </div>
