--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   ---------------------------------------------- -->
   <div class="about-staff">
     <div class="container">
+      <h2>Our Leads</h2>
       <div class="row">
         <div class="col">
           <img src="" alt="Wario Rules">
