--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <h5>Outline</h5>
+          <h4>Outline</h4>
           <p>Text</p>
         </div>
-        <div class="col">
-          <a class="btn btn-outline" href=""></a>
+        <div class="col-auto">
+          <a class="btn btn-outline" href="">Sign-Up</a>
         </div>
       </div>
     </div>
